# MyoGestic-VHI

./: .gitignore  ControlHandSkeleton.cs.uid  ControlPanel.tscn  HandMain.tscn  LSLCommunicationController.cs  LSLCommunicationController.cs.uid  PredictedHandSkeleton.cs.uid  README.md  VHI_godot.csproj  VHI_godot.sln  context7.json  export_presets.cfg  icon.icns  icon.png.import  project.godot  properdocs.yml  pyproject.toml  test_lsl_sender.py
.config/: dotnet-tools.json
.github/workflows/: docs.yml  release.yml
docs/: getting-started.md  index.md  troubleshooting.md
images/: logo.png.import
models/: WVRLeftHand_1106_ASCII.fbx.import  WVRRightHand_1106_ASCII.fbx.import
overrides/: main.html
proto/: myogestic_vhi.proto
scenes/: ControlPanel.tscn  HandMain.tscn
src/: ControlHandSkeleton.cs  ControlPanelUI.cs  ControlPanelUI.cs.uid  GrpcControlServer.cs  GrpcControlServer.cs.uid  LSLCommunicationController.cs  LSLWrapper.cs  LSLWrapper.cs.uid  MovementConfigGenerator.cs  MovementConfigGenerator.cs.uid  MovementConfigLoader.cs  MovementConfigLoader.cs.uid  MovementDefinitions.cs  MovementDefinitions.cs.uid  MovementUI.cs  MovementUI.cs.uid  PredictedHandSkeleton.cs  SharedFrameworkAssemblyLoader.cs  SharedFrameworkAssemblyLoader.cs.uid  VhiControlService.cs  VhiControlService.cs.uid
tests/: test_all_streams.py  test_lsl_receiver.py  test_lsl_sender.py  test_movementstate_receiver.py  test_stream_info.py
tools/: api_index_prelude.md  gen_api_docs.sh  strip_empty_param_sections.py  strip_godot_lifecycle.py  strip_protobuf_boilerplate.py
(+16 files in other folders)
